2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/pango/pangoclutter-render.c: Hush a compiler warning
	by removing a unused variable.

2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-label.c (clutter_label_ensure_layout): If the
	label has a requested size, force it when ensuring the layout.

2007-12-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* tests/test-unproject.c: Fix type comparison.

	* tests/test-score.c: Save the returned ids.

2007-12-05  Matthew Allum  <mallum@openedhand.com>

	reviewed by: <delete if not using a buddy>

	* clutter/pango/pangoclutter-render.c: (tc_get), (free_glyph_info),
	(draw_glyph), (draw_trapezoid), (pango_clutter_render_layout),
	(pango_clutter_render_layout_line),
	(pango_clutter_render_clear_caches), (prepare_run), (draw_begin):

2007-12-05  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-score.h: Rearrange declarations.

	* clutter/clutter-score.c: More documentation in the long
	description of the ClutterScore section.

	* clutter/clutter-debug.h:
	* clutter/clutter-main.c: Add the CLUTTER_DEBUG_SHADER flag,
	for debugging the shader calls.

	* clutter/clutter-feature.h: Fix the documentation of the
	feature flags.

	* clutter/Makefile.am: Remove trailing whitespace.

2007-12-05  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* tests/Makefile.am:
	* tests/test-unproject:
	(clutter_actor_transform_stage_point):
	Added new function for translating stage coordinates into local
	actor coordinates.

2007-12-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-score.c: Better document ClutterScore
	and its API.

2007-12-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-score.[ch]: Reimplement ClutterScore using
	a N-ary tree to store the timelines. Remove clutter_score_add():
	the same functionality can be achieved by passing a NULL
	parent to clutter_score_append().
