@@ -888,7 +888,7 @@ json_parser_load_from_file (JsonParser   *parser,
 gboolean
 json_parser_load_from_data (JsonParser   *parser,
                             const gchar  *data,
-                            gsize         length,
+                            gssize        length,
                             GError      **error)
 {
   GScanner *scanner;
@@ -909,7 +909,7 @@ json_parser_load_from_data (JsonParser   *parser,
     }
 
   scanner = json_scanner_new (parser);
-  g_scanner_input_text (scanner, data, strlen (data));
+  g_scanner_input_text (scanner, data, length);
 
   for (i = 0; i < n_symbols; i++)
     {
